[package]
publish = false
name = "vibe"
version = "0.3.0"
description = "windows acrylic effects for electron 💫"
authors = [ "pyke.io" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56.1"
exclude = [ "index.node" ]

[lib]
crate-type = [ "cdylib" ]

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 8
incremental = false
panic = "abort"

[dependencies]
windows-sys = { version = "0.42", features = [ "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_UI_Controls", "Win32_Graphics_Dwm" ] }
lazy_static = "1.4"
csscolorparser = { version = "0.6", default-features = false }

[dependencies.neon]
version = "0.10"
default-features = false
features = [ "napi-6" ]
